--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
+++ b/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
@@ -162,7 +162,7 @@ asmlinkage long sys_ptrace(long request, long pid, long addr, long data);
 
 - **addr**和**data**向内核传递一个**内存地址**和**附加信息**。其语义因选择的操作而不同。
 - 借助于符号常数，**request**用于选择一个**操作**，由ptrace执行。手册页ptrace(2)、内核源代码中的`<ptrace.h>`列出了所有可能值。可用的选项如下。
-    - `PTRACE_ATTACH`发出一个请求，**连接到一个进程**并**开始跟踪**。`TRACE_DETACH`从该进程**断开并结束跟踪**。当**被跟踪的进程有待决信号**时，**进程总是会被终止**。该选项使得被跟踪进程在系统调用后或一条汇编语言指令之后暂停。 在被跟踪的进程暂停时，跟踪者程序通过SIGCHLD信号得到一个通知:在被跟踪进程暂停前， 13 跟踪者可用第2章讨论的wait函数等待。 在设置了跟踪之后，将SIGSTOP信号发送给被跟踪进程，这导致跟踪者进程第一次被中断。 在跟踪系统调用时，这是必要的，如下面的例子所示。
+    - `PTRACE_ATTACH`发出一个请求，**连接到一个进程**并**开始跟踪**。`TRACE_DETACH`从该进程**断开并结束跟踪**。当**被跟踪的进程有待决信号**时，**进程总是会被终止**。该选项使得**被跟踪进程**在**系统调用后**或**一条汇编语言指令之后暂停**。 在被跟踪的进程**暂停时**，跟踪者程序通过**SIGCHLD信号**得到一个通知:在被跟踪进程暂停前， 13 跟踪者可用第2章讨论的wait函数等待。 在设置了跟踪之后，将SIGSTOP信号发送给被跟踪进程，这导致跟踪者进程第一次被中断。 在跟踪系统调用时，这是必要的，如下面的例子所示。
  PEEKTEXT、PEEKDATA和PEEKUSR从进程地址空间读取数据。PEEKUSR读取普通的CPU寄存 器和使用的任何其他调试寄存器1(当然，会根据标识符只读取一个寄存器的内容，而不是 读取整个寄存器集合的内容)。PEEKEXT和PEEKDATA从进程的代码段和数据段读取任意字。
  POKETEXT、POKEDATA和PEEKUSR向被监控进程的三个指定区域写入值，因而可以操作进程 地址空间的内容。这在交互式调试程序时是非常重要的。 因为PTRACE_POKEUSR操作CPU的调试寄存器，该选项支持对高级调试技术的使用。例如可 监控此类事件:在一定的条件满足时，在特定位置暂停程序的执行。
  PTRACE_SETREGS和PTRACE_GETREGS设置和读取CPU的特权寄存器集合的值。
