--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
+++ b/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
@@ -164,13 +164,14 @@ asmlinkage long sys_ptrace(long request, long pid, long addr, long data);
 - 借助于符号常数，**request**用于选择一个**操作**，由ptrace执行。手册页ptrace(2)、内核源代码中的`<ptrace.h>`列出了所有可能值。可用的选项如下。
     - `PTRACE_ATTACH`发出一个请求，**连接到一个进程**并**开始跟踪**。`TRACE_DETACH`从该进程**断开并结束跟踪**。当**被跟踪的进程有待决信号**时，**进程总是会被终止**。该选项使得**被跟踪进程**在**系统调用后**或**一条汇编语言指令之后暂停**。 在被跟踪的进程**暂停时**，跟踪者程序通过**SIGCHLD信号**得到一个通知: 在被跟踪进程暂停前，跟踪者可用第2章讨论的wait函数等待。 在设置了跟踪之后，将SIGSTOP信号发送给被跟踪进程，这导致跟踪者进程第一次被中断。 在跟踪系统调用时，这是必要的，如下面的例子所示。
 
-    注: 因为在调用ptrace系统调用时，执行的进程显然不是被跟踪进程，CPU物理寄存器自然保存的是跟踪者进程的值， 而不是被跟踪进程。这也是使用第14章讨论的pt_regs实例的数据的原因。这些数据在进程经过进程切换后重新 激活时，将被复制到寄存器集合中。操作该结构的数据，相当于操作寄存器本身。
+    注: 因为在调用**ptrace系统调用**时，执行的进程显然不是被跟踪进程，**CPU物理寄存器**自然保存的是**跟踪者进程的值**， 而不是被跟踪进程。这也是使用第14章讨论的pt_regs实例的数据的原因。这些数据在进程经过进程切换后重新激活时，将被复制到寄存器集合中。操作该结构的数据，相当于操作寄存器本身。
 
- PEEKTEXT、PEEKDATA和PEEKUSR从进程地址空间读取数据。PEEKUSR读取普通的CPU寄存 器和使用的任何其他调试寄存器1(当然，会根据标识符只读取一个寄存器的内容，而不是 读取整个寄存器集合的内容)。PEEKEXT和PEEKDATA从进程的代码段和数据段读取任意字。
- POKETEXT、POKEDATA和PEEKUSR向被监控进程的三个指定区域写入值，因而可以操作进程 地址空间的内容。这在交互式调试程序时是非常重要的。 因为PTRACE_POKEUSR操作CPU的调试寄存器，该选项支持对高级调试技术的使用。例如可 监控此类事件:在一定的条件满足时，在特定位置暂停程序的执行。
- PTRACE_SETREGS和PTRACE_GETREGS设置和读取CPU的特权寄存器集合的值。
- PTRACE_SETFPREGS和PTRACE_GETFPREGS设置和读取用于浮点计算的寄存器。这些操作在
-测试和交互式调试应用程序时也非常有用。
- 系统调用追踪是基于PTRACE_SYSCALL的。如果用该选项激活ptrace，那么内核将开始执行
-进程，直至调用一个系统调用。在被追踪进程停止后，wait通知跟踪者进程，跟踪者接下 来可以使用上述的ptrace选项，来分析被跟踪进程的地址空间，以收集有关系统调用的信息。 在完成系统调用之后，被跟踪的进程第二次暂停，使得跟踪者进程可以检查调用是否成功。 因为系统调用机制因平台而不同，跟踪程序如strace必须针对每个体系结构分别实现数据 的读取;这是一个乏味的任务，很快会致使可移植程序的源代码变得不可读(strace的源 代码中有大量预处理器条件，阅读其代码非常痛苦)。
- PTRACE_SINGLESTEP将处理器在执行被追踪进程期间，置于单步执行模式。在这种模式下， 跟踪者进程在每个汇编语言指令之后，可以访问被跟踪进程。这仍然是一种非常流行的应 用程序调试技术，特别是在试图跟踪编译器错误或其他比较微秒的问题时。 单步功能的实现非常强烈地依赖于所使用的CPU，毕竟，内核此时是在一个面向机器的层 8 次上运作的。尽管如此，在所有平台上都可以向跟踪者进程提供一个一致的接口。在汇编 指令执行之后，向跟踪者发送一个SIGCHLD信号，跟踪者接下来会使用其他的ptrace选项，
+    - PEEKTEXT、PEEKDATA和PEEKUSR从进程地址空间读取数据。PEEKUSR读取普通的CPU寄存 器和使用的任何其他调试寄存器1(当然，会根据标识符只读取一个寄存器的内容，而不是 读取整个寄存器集合的内容)。PEEKEXT和PEEKDATA从进程的代码段和数据段读取任意字。
+    - POKETEXT、POKEDATA和PEEKUSR向被监控进程的三个指定区域写入值，因而可以操作进程 地址空间的内容。这在交互式调试程序时是非常重要的。 因为PTRACE_POKEUSR操作CPU的调试寄存器，该选项支持对高级调试技术的使用。例如可 监控此类事件:在一定的条件满足时，在特定位置暂停程序的执行。
+    - PTRACE_SETREGS和PTRACE_GETREGS设置和读取CPU的特权寄存器集合的值。
+    - PTRACE_SETFPREGS和PTRACE_GETFPREGS设置和读取用于浮点计算的寄存器。这些操作在测试和交互式调试应用程序时也非常有用。
+    - 系统调用追踪是基于PTRACE_SYSCALL的。如果用该选项激活ptrace，那么内核将开始执行进程，直至调用一个系统调用。在被追踪进程停止后，wait通知跟踪者进程，跟踪者接下 来可以使用上述的ptrace选项，来分析被跟踪进程的地址空间，以收集有关系统调用的信息。 在完成系统调用之后，被跟踪的进程第二次暂停，使得跟踪者进程可以检查调用是否成功。 因为系统调用机制因平台而不同，跟踪程序如strace必须针对每个体系结构分别实现数据 的读取;这是一个乏味的任务，很快会致使可移植程序的源代码变得不可读(strace的源 代码中有大量预处理器条件，阅读其代码非常痛苦)。
+    - PTRACE_SINGLESTEP将处理器在执行被追踪进程期间，置于单步执行模式。在这种模式下， 跟踪者进程在每个汇编语言指令之后，可以访问被跟踪进程。这仍然是一种非常流行的应 用程序调试技术，特别是在试图跟踪编译器错误或其他比较微秒的问题时。 单步功能的实现非常强烈地依赖于所使用的CPU，毕竟，内核此时是在一个面向机器的层 8 次上运作的。尽管如此，在所有平台上都可以向跟踪者进程提供一个一致的接口。在汇编 指令执行之后，向跟踪者发送一个SIGCHLD信号，跟踪者接下来会使用其他的ptrace选项，收集被跟踪进程状态相关的详细信息。该循环不断重复，在用PTRACE_SINGLESTEP参数调 用ptrace之后将执行下一条汇编指令，被跟踪进程进入睡眠，通过SIGCHLD信号通知跟踪 者，等等。
+    - PTRACE_KILL发送KILL信号，关闭被追踪进程。
+    - PTRACE_TRACEME开始对当前进程的跟踪。当前进程的父进程自动承担跟踪者的角色，必须准备好从子进程接收信息。
+   - PTRACE_CONT恢复被跟踪进程的执行，但不自动暂停该进程的具体条件，被跟踪的进程将在接收到信号时暂停。
