--- a/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
+++ b/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
@@ -175,3 +175,109 @@ asmlinkage long sys_ptrace(long request, long pid, long addr, long data);
     - PTRACE_KILL发送KILL信号，关闭被追踪进程。
     - PTRACE_TRACEME开始对当前进程的跟踪。当前进程的父进程自动承担跟踪者的角色，必须准备好从子进程接收信息。
    - PTRACE_CONT恢复被跟踪进程的执行，但不自动暂停该进程的具体条件，被跟踪的进程将在接收到信号时暂停。
+
+## 系统调用追踪
+
+下列简短示例程序说明了**ptrace的使用**。ptrace将**当前进程**连接到**一个进程**，并检测系统调用的使用。就这点而论，它是最简版本的strace。
+
+```cpp
+/* strace(1)的简单替换 */ 
+
+#include<stdio.h>
+#include<stdlib.h>
+#include<signal.h>
+#include<unistd.h>
+#include<sys/ptrace.h>
+#include<sys/wait.h>
+#include<asm/ptrace.h>      /*用于ORIG_EAX */
+
+static long pid;
+
+int upeek(int pid, long off, long *res) {
+    long val;
+
+    val = ptrace(PTRACE_PEEKUSER, pid, off, 0);
+        if (val == -1) {
+            return -1;
+        }
+
+        *res = val;
+        return 0;
+    }
+
+void trace_syscall() {
+    long res;
+
+    res = ptrace(PTRACE_SYSCALL, pid, (char*) 1, 0);
+    if (res < 0) {
+        printf("Failed to execute until next syscall: %d\n", res);
+    }
+}
+
+void sigchld_handler (int signum) {
+    long scno;
+    int res;
+
+    /* 查明系统调用（系统相关的）……*/
+    if (upeek(pid, 4*ORIG_EAX, &scno) < 0) {
+        return;
+    }
+
+    /* ……并输出信息 */
+    if (scno != 0) {
+        printf("System call: %u\n", scno);
+    }
+
+    /* 激活追踪直至下一个系统调用 */
+    trace_syscall();
+}
+
+int main(int argc, char** argv) {
+    int res;
+
+    /* 检查参数数目 */
+    if (argc != 2) {
+        printf("Usage: ptrace <pid>\n");
+        exit(-1);
+    }
+
+    /* 从命令行参数读取目标pid */
+    pid = strtol(argv[1], NULL, 10);
+    if (pid <= 0) {
+        printf("No valid pid specified\n");
+        exit(-1);
+    } else {
+        printf("Tracing requested for PID %u\n", pid);
+    }
+
+    /* 安装SIGCHLD的处理程序 */
+    struct sigaction sigact;
+    sigact.sa_handler = sigchld_handler;
+    sigaction(SIGCHLD, &sigact, NULL);
+
+    /* 连接到目标进程 */
+    res = ptrace(PTRACE_ATTACH, pid, 0, 0);
+    if (res < 0) {
+        printf("Failed to attach: %d\n", res);
+        exit(-1);
+    } else {
+        printf("Attached to %u\n", pid);
+    } for (;;) {
+        wait(&res);
+        if (res == 0) {
+            exit(1);
+        }
+    }
+} 
+```
+
+程序结构大体上如下。
+
+- 从命令行读取被跟踪程序的pid，并进行通常的检查。
+- 安装CHLD信号的**一个处理程序**，因为每次**被跟踪程序中断时**，内核都会向跟踪者进程**发送该信号**。
+- 跟踪者进程通过ptrace请求`PTRACE_ATTACH`，将自身连接到目标应用程序。
+- 跟踪者程序的主体由一个简单的无限循环组成，其中**重复调用wait目录**，等待新的CHLD信号的到达。 
+
+该程序的结构并**不依赖于特定的处理器类型**，可以用于Linux支持的所有系统。但用于确定所调用系统调用编号的方法，却是与体系结构非常相关的。该程序给出的方法**只适用于IA-32系统**，该平台将系统调用编号放置在所保存的寄存器集合中一个特定的偏移量处。 该偏移量保存在 `asm/ptrace.h`定义的ORIG_EAX常数中。其值可以使用PTRACE_PEEKUSER读取，必须乘以4，因为此体 系结构上寄存器的字长是4字节。
+当然，在其他体系结构上的实现会是不同的。详细情况，请参见内核源代码中与系统调用相关的 部分，以及标准的strace工具的源代码。
+我们主要的目标是说明如何用ptrace检查被监控的进程。在通过PTRACE_ATTACH开始跟踪进程之 后，大部分工作都委托给CHLD信号的处理程序函数，其实现在sigchld_handler中。该函数负责执行 下列任务。
