--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
+++ b/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
@@ -278,6 +278,9 @@ int main(int argc, char** argv) {
 - 跟踪者进程通过ptrace请求`PTRACE_ATTACH`，将自身连接到目标应用程序。
 - 跟踪者程序的主体由一个简单的无限循环组成，其中**重复调用wait目录**，等待新的CHLD信号的到达。 
 
-该程序的结构并**不依赖于特定的处理器类型**，可以用于Linux支持的所有系统。但用于确定所调用系统调用编号的方法，却是与体系结构非常相关的。该程序给出的方法**只适用于IA-32系统**，该平台将系统调用编号放置在所保存的寄存器集合中一个特定的偏移量处。 该偏移量保存在 `asm/ptrace.h`定义的ORIG_EAX常数中。其值可以使用PTRACE_PEEKUSER读取，必须乘以4，因为此体 系结构上寄存器的字长是4字节。
-当然，在其他体系结构上的实现会是不同的。详细情况，请参见内核源代码中与系统调用相关的 部分，以及标准的strace工具的源代码。
-我们主要的目标是说明如何用ptrace检查被监控的进程。在通过PTRACE_ATTACH开始跟踪进程之 后，大部分工作都委托给CHLD信号的处理程序函数，其实现在sigchld_handler中。该函数负责执行 下列任务。
+该程序的结构并**不依赖于特定的处理器类型**，可以用于Linux支持的所有系统。但用于确定所调用**系统调用编号**的方法，却是与**体系结构非常相关**的。该程序给出的方法**只适用于IA-32系统**，该平台将系统调用编号放置在所保存的寄存器集合中一个特定的偏移量处。 该偏移量保存在 `asm/ptrace.h`定义的`ORIG_EAX`常数中。其值可以使用`PTRACE_PEEKUSER`读取，必须乘以4，因为此体系结构上**寄存器**的**字长**是**4字节**。
+
+当然，在其他体系结构上的实现会是不同的。详细情况，请参见内核源代码中与系统调用相关的 部分，以及标准的**strace工具的源代码**。
+
+我们主要的目标是说明如何用ptrace检查被监控的进程。在通过PTRACE_ATTACH开始跟踪进程之后，大部分工作都委托给**CHLD信号**的**处理程序函数**，其**实现**在sigchld_handler中。该函数负责执行下列任务。
+
