--- a/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
+++ b/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
@@ -287,4 +287,6 @@ int main(int argc, char** argv) {
 - 使用**平台相关**的方法，帮助查找所调用**系统调用的编号**。 如果结果是一个不等于0的系统调用编号，则输出该信息。检测0是必要的，因为只要求记录系统调用，而不是发送给被跟踪进程的信号。
 - 帮助恢复**被跟踪进程的控制流**。当然，**必须通知内核**，该进程的执行将在下一个系统调用时暂停。这是使用ptrace请求PTRACE_SYSCALL完成的。
 
-在开始运转之后，程序的控制流是很明显的。**被跟踪进程**请求的**系统调用**会触发内核中的**ptrace 机制**，进而**向跟踪者进程发送CHLD信号**。跟踪者进程的**信号处理程序**会读取所需信息，即**系统调用的编号**，并**输出它**，然后再次使用ptrace机制。被跟踪进程的执行将恢复，并在再次调用系统调用时中 断。
+在开始运转之后，程序的控制流是很明显的。**被跟踪进程**请求的**系统调用**会触发内核中的**ptrace 机制**，进而**向跟踪者进程发送CHLD信号**。跟踪者进程的**信号处理程序**会读取所需信息，即**系统调用的编号**，并**输出它**，然后再次使用ptrace机制。被跟踪进程的执行将恢复，并在再次调用系统调用时中断。
+
+但整个过程是**如何开始运转**的? 无论如何，为**启用对系统调用的跟踪**，都需要第一次调用CHLD的处理程序。如上所述，在**一个信号**发送到**被追踪进程**时，内核也会向**跟踪者**发送一个**SIGCHLD**信号， 则会调用对应的处理程序，与系统调用发生时相同。事实上，在**发起跟踪时**，内核会**自动**向**被跟踪进程**发送一个**STOP信号**，以确保在跟踪开始时调用处理程序(即使跟踪者没有收到其他信号)。这使得 跟踪过程运转起来。
