--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
+++ b/Linux/Learning/深入Linux内核架构/第13章 系统调用/3. 系统调用的实现.md
@@ -318,4 +318,9 @@ struct task_struct {
 };
 ```
 
-如果设置了PTRACE_ATTACH，则用ptrace_attach建立跟踪者进程与目标进程之间的关联。在完 成后，将进行如下几步。
+如果设置了`PTRACE_ATTACH`，则用`ptrace_attach`建立**跟踪者进程**与**目标进程**之间的关联。在完成后，将进行如下几步。
+
+- **目标进程**的**ptrace**成员设置为`PT_TRACED`。
+- **跟踪者进程**变为**目标进程**的**父进程**(**真正的父进程**保存在`real_parent`)。
+- **被跟踪进程**添加到**跟踪者**的`ptrace_children`链表，使用`task_struct`的`ptrace_list`成员作为**链表元素**。
+- 向**被跟踪的进程**发送一个**STOP信号**。
