--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/附录B 使用源代码/2. 用Kconfig进行配置.md
+++ b/Linux/Learning/深入Linux内核架构/附录B 使用源代码/2. 用Kconfig进行配置.md
@@ -11,11 +11,11 @@
 - 各组件可以**持久编译到内核**中、可以**编译为组件**或直接**忽略掉**(在某些环境下，可能无法将某些组件编译为模块)。
 - 在配置选项之间，可能存在**相互依赖关系**。换言之，某些选项只能与一个或多个其他选项连同使用。
 - 必须能够给出一个**可用选项列表**，供用户从中选择。有些情形，需要提示用户输入编号(或类似的值)。
-- 必须能够层次化地编排各种配置选项(在一个树型结构中)。
+- 必须能够**层次化**地编排各种配置选项(在一个**树型结构**中)。
 - 配置选项可能依体系结构而不同。
 - 配置语言不应该过于复杂，因为编写配置脚本并非大多数内核程序员喜欢做的事情。 
 
-配置信息应该散布在整个源代码树中，使得没必要维护一个巨型的中枢配置文件，这种巨型配置文件将难于打补丁。在代码包含了可配置选项的每个子目录中，都必须有一个配置文件。下一小节将 用一个例子，来说明配置文件的语法。
+**配置信息**应该**散布在整个源代码树**中，使得没必要维护一个巨型的中枢配置文件，这种巨型配置文件将难于打补丁。在代码包含了可配置选项的**每个子目录**中，都必须有一个配置文件。
 
 # 配置文件示例
 
