--- a/Linux/Learning/深入Linux内核架构/附录B 使用源代码/5. 调试和分析内核.md
+++ b/Linux/Learning/深入Linux内核架构/附录B 使用源代码/5. 调试和分析内核.md
@@ -10,9 +10,9 @@
 
 GDB代表`GNU debugger`，它是**默认的Linux调试器**。**每个Linux发行版**都带有**直接可用的GDB二进制文件**，可以用适当的软件包管理系统。当然，读者完全可以自行从www.gnu.org网站(或其他镜像) 取得源代码进行编译，但本附录就不讨论这些了。
 
-该调试器提供了非常广泛的选项，本附录只简要概述其用法。GDB的详细讲述，可以参见其附带 的用法指南(makeinfo格式)，也可以用info gdb查看。
+该调试器提供了非常广泛的选项，本附录只简要概述其用法。GDB的详细讲述，可以参见其附带的用法指南(makeinfo格式)，也可以用info gdb查看。
 
-为调试一个程序(在这方面，内核也不例外)，编译器必须将特别的调试信息集成到二进制文件 中，以便调试器获取二进制文件和源代码之间关系的所有必要信息。在gcc编译时必须选中-g选项， 如下所示:
+为**调试一个程序**(在这方面，**内核也不例外**)，编译器必须将特别的调试信息集成到二进制文件 中，以便调试器获取二进制文件和源代码之间关系的所有必要信息。在gcc编译时必须选中-g选项， 如下所示:
 
 ```
 gcc -g test.c -o test
