--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/附录B 使用源代码/5. 调试和分析内核.md
+++ b/Linux/Learning/深入Linux内核架构/附录B 使用源代码/5. 调试和分析内核.md
@@ -31,8 +31,17 @@ GDB能够完成下列工作。
 - 确定程序中使用的**所有符号类型**。
 - 显示或操作**符号的当前值**。
 - **反引用**程序中的**指针**或访问随机的**存储单元**，以**读取**或**修改**其值。
-- 设置断点，使得程序在执行到源代码中给定位置时暂停，同时启用调试器。
-- 设置条件断点，在给定条件满足时暂停程序执行。例如，当某个变量的值设置为预定义值时。 
+- 设置**断点**，使得程序在执行到源代码中给定位置时暂停，同时启用调试器。
+- 设置**条件断点**，在给定条件满足时暂停程序执行。例如，当某个变量的值设置为预定义值时。 
 
-具体可用的内核调试选项，取决于所使用的方法。 用于执行这些操作的命令语法都易学易记，因为都是基于C语言的。这在GDB文档中解释得很
-好。
+具体可用的内核调试选项，取决于所使用的方法。 用于执行这些操作的命令语法都易学易记，因为都是基于C语言的。这在GDB文档中解释得很好。
+
+类似于大多数UNIX工具，GDB也是**基于文本**的。这有优点也有缺点，特别是，在文本界面下，**无法**通过**图形指针可视化显示**数据结构之间的关系。同样，GDB的源代码视图也不怎么理想，因为它只能显示很短一段源代码。
+
+DDD是**Data Display Debugger**的简称，开发该调试器是为了改进GDB的这些不足，现在所有流行的发行版都包含了DDD。作为**X11**下的一个**图形化工具**，它弥补了GDB的不足。DDD是GDB的一个用户界面， 因而也支持GDB的所有特性。因为在DDD中也可用直接输入所有的GDB命令，所有选项都是可用的，不仅仅是那些直接集成到图形用户界面中的特性。
+
+DDD软件包带有很好的使用指南，特别地，其用户界面非常直观，因此本附录不解释如何使用 它。
+
+# 本地内核
+
+proc文件系统包含了一个文件，名为kcore。其中包含了内核当前状态的映像，格式为ELF内存 转储格式(参见附录E)。因为GDB内存转储文件是可以读取和处理的，因而可以与内核及其调试符号
