--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/附录B 使用源代码/5. 调试和分析内核.md
+++ b/Linux/Learning/深入Linux内核架构/附录B 使用源代码/5. 调试和分析内核.md
@@ -56,4 +56,4 @@ ddd /home/wolfgang/linux-2.6.24/vmlinux /proc/kcore
 
 ![2020-01-28-22-52-34.png](./images/2020-01-28-22-52-34.png)
 
-首先从内核中定义为**全局变量**的**数据结构实例**开始。输入graph display proc_root，即告知 DDD显示fs/proc_root.c中声明的proc_dir_entry类型的实例proc_root。通过双击，可以打开与 该数据结构关联的其他实例。
+首先从内核中定义为**全局变量**的**数据结构实例**开始。输入`graph display proc_root`，即告知 DDD显示fs/proc_root.c中声明的proc_dir_entry类型的实例proc_root。通过双击，可以打开与 该数据结构关联的其他实例。
