--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/附录B 使用源代码/5. 调试和分析内核.md
+++ b/Linux/Learning/深入Linux内核架构/附录B 使用源代码/5. 调试和分析内核.md
@@ -56,4 +56,10 @@ ddd /home/wolfgang/linux-2.6.24/vmlinux /proc/kcore
 
 ![2020-01-28-22-52-34.png](./images/2020-01-28-22-52-34.png)
 
-首先从内核中定义为**全局变量**的**数据结构实例**开始。输入`graph display proc_root`，即告知 DDD显示fs/proc_root.c中声明的proc_dir_entry类型的实例proc_root。通过双击，可以打开与 该数据结构关联的其他实例。
+首先从内核中定义为**全局变量**的**数据结构实例**开始。输入`graph display proc_root`，即告知DDD显示`fs/proc_root.c`中声明的`proc_dir_entry类型`的实例`proc_root`。通过双击，可以打开与该数据结构关联的其他实例。
+
+>如果指针没有类型信息(对于标准双链表，经常是这样)，可以在GDB的输入栏指定C语言风格的类型转换。
+
+如果要使DDD检测**指向同一内存区**的**指针**，并将箭头重定向到该结构的一个现存表示，而不是重 新插入一个新的图示，则需要启用Data->Detect Aliases选项。在前一个例子中就是这样，parent 指针都(正确地)指向了同一个数据元素。请注意，在DDD以这种模式运作时，速度会慢很多。
+
+内存转储文件在由调试器处理时，内核通常不会修改转储文件，因而GDB不会注意到内核内存某些 值的改变，改变必须通过kcore文件才能传播。如果内存的内容与用户的修改相关，该用户必须用core /proc/kcore显式重新加载内存转储文件。DDD会自动将修改的值以黄色背景显示，使之易于识别。
