--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/附录B 使用源代码/5. 调试和分析内核.md
+++ b/Linux/Learning/深入Linux内核架构/附录B 使用源代码/5. 调试和分析内核.md
@@ -60,6 +60,16 @@ ddd /home/wolfgang/linux-2.6.24/vmlinux /proc/kcore
 
 >如果指针没有类型信息(对于标准双链表，经常是这样)，可以在GDB的输入栏指定C语言风格的类型转换。
 
-如果要使DDD检测**指向同一内存区**的**指针**，并将箭头重定向到该结构的一个现存表示，而不是重 新插入一个新的图示，则需要启用Data->Detect Aliases选项。在前一个例子中就是这样，parent 指针都(正确地)指向了同一个数据元素。请注意，在DDD以这种模式运作时，速度会慢很多。
+如果要使DDD检测**指向同一内存区**的**指针**，并将箭头重定向到该结构的一个现存表示，而不是重 新插入一个新的图示，则需要启用`Data->Detect Aliases`选项。在前一个例子中就是这样，parent 指针都(正确地)指向了同一个数据元素。请注意，在DDD以这种模式运作时，速度会慢很多。
 
 内存转储文件在由调试器处理时，内核通常不会修改转储文件，因而GDB不会注意到内核内存某些 值的改变，改变必须通过kcore文件才能传播。如果内存的内容与用户的修改相关，该用户必须用core /proc/kcore显式重新加载内存转储文件。DDD会自动将修改的值以黄色背景显示，使之易于识别。
+
+# KGDB
+
+两台通过网络或串行电缆连接的机器，提供了一个更好的调试环境，此时可用的选项几乎与调试普通应用程序相同。KGDB补丁在内核中安装一段简短的存根代码，向在第二台系统上运行的调试器提供了一个接口。因为GDB支持**远程调试**，内核可以利用这种调试形式，来提供断点、单步跟踪等特性。
+
+KGDB没有包含在内核版本2.6.24中，但经过多年努力，在读者阅读本书时，它应该已经包含在内核版本2.6.26中了。如果需要对旧版本的内核提供KGDB支持，还有相关的补丁可用。
+
+在获得一个具备KGDB支持的内核后，配置中包含了新的菜单项`Kernel hacking->KGDB : kernel debugging with remote gdb`，该选项必须启用。如果使用串行接口进行数据传输，必须对 特定硬件进行正确设置。当然，内核二进制映像还应该包含调试符号。 14
+
+因为在撰写本书时，KGDB仍然处于比较激烈的演化过程中，对于如何将gdb连接到一个运行中 的内核，读者可以参考Documentation/DocBook/kgdb.html(可以用make htmldocs生成)。
