--- Auto-Git Commit ---

--- a/Linux/Tools/rt-tests/cyclictest/简介.md
+++ b/Linux/Tools/rt-tests/cyclictest/简介.md
@@ -1,11 +1,22 @@
 
-# 简介
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [1. 简介](#1-简介)
+- [2. 安装](#2-安装)
+- [3. 使用](#3-使用)
+- [4. 参考](#4-参考)
+
+<!-- /code_chunk_output -->
+
+# 1. 简介
 
 cyclictest 是什么？ 
 
 “Cyclictest is a high resolution test program, written by User:Tglx, maintained by User:Clark Williams ”，也就是它是一个高精度的测试程序，Cyclictest 是 `rt-tests` 下的一个测试工具，也是rt-tests 下使用最广泛的测试工具，一般主要用来测试使用内核的延迟，从而判断内核的实时性。
 
-# 安装
+# 2. 安装
 
 预先包安装
 
@@ -30,7 +41,7 @@ make install
 make cyclictest
 ```
 
-# 使用
+# 3. 使用
 
 通过`cyclictest --help`查看参数含义
 
@@ -213,7 +224,7 @@ either run as root or join realtime group
 ./cyclictest -a 1 -n -p 99 -i 1000 -l 1000 -t 1 -D 100 -h 30 -q
 ```
 
-# 参考
+# 4. 参考
 
 Linux Foundation: https://wiki.linuxfoundation.org/realtime/documentation/howto/tools/rt-tests
 
