--- Auto-Git Commit ---

--- a/Linux/Tools/Trace/Ftrace/Ftrace实现原理与开发实践/介绍与实践.md
+++ b/Linux/Tools/Trace/Ftrace/Ftrace实现原理与开发实践/介绍与实践.md
@@ -1,38 +1,41 @@
 
-# 什么是 Ftrace
+# 1. 什么是 Ftrace
 
-## Linux tracing overview
+## 1.1. Linux tracing overview
 
 ![](./images/tracing.jpg)
 
-## Ftrace overview
+## 1.2. Ftrace overview
 
-![](./images/ftrace)
+![](./images/ftrace.jpg)
 
-# Ftrace 实现原理
+# 2. Ftrace 实现原理
 
-## Ftrace function tracer footstone: -pg
+## 2.1. Ftrace function tracer footstone: -pg
 
 以 MIPS 为例：`arch/mips/kernel/mcount.S`
 
 * Ftrace: `gcc -pg`
 
+```
         $ echo 'main(){}' | \
           mipsel-linux-gnu-gcc -x c -S -o - - -pg | grep mcount
 
           subu	$sp,$sp,8  # _mcount pops 2 words from  stack
           jal	_mcount
+```
 
 * KFT: `gcc -finstrument-functions`
 
+```
         $ echo 'main(){}' | \
           mipsel-linux-gnu-gcc -x c -S -o - - \
           -finstrument-functions | egrep "enter\)|exit\)"
 
           lw $25,%call16(__cyg_profile_func_enter)($28)
           lw $25,%call16(__cyg_profile_func_exit)($28)
-
-## Dynamic function tracing
+```
+## 2.2. Dynamic function tracing
 
 以 MIPS 为例：`arch/mips/kernel/ftrace.c`
 
@@ -45,7 +48,7 @@
 * 跟踪阶段
     * 调用 `ftrace_run_update_code`，替换回 `mcount` 调用点：`ftrace_make_call()`
 
-## Function Graph tracer
+## 2.3. Function Graph tracer
 
 * 模拟实现 `__cyg_profile_func_exit`
 
@@ -57,7 +60,7 @@
         * 然后调用 `ftrace_return_to_handler`，并模拟exit：`ftrace_pop_return_trace`
         * 恢复原来的返回地址并跳回
 
-## High resolution trace clock: `sched_clock()`
+## 2.4. High resolution trace clock: `sched_clock()`
 
 * 高精度：`us/ns`
     * `kernel/sched_clock.c` 定义的 `sched_clock()` 基于 `jiffies`，精度不够
@@ -76,19 +79,22 @@
     
         `_mcount() -> sched_clock() -> _mcount()`
 
-## User space tracing
+## 2.5. User space tracing
 
 * 可通过 `trace_marker` 模拟实现用户态函数跟踪
 
 * Systrace 实现
     * Java
 
+```
         Trace.traceBegin(tag, name)/Trace.traceEnd(tag)
+```
 
     * Native
 
+```
         ATRACE_BEGIN(name)/ATRACE_END()
-
+```
 * 实现原理
     * atrace_init_once()
 
@@ -104,16 +110,16 @@
         char c = 'E';
         write(atrace_marker_fd, &c, 1);
 
-## More
+## 2.6. More
 
 * KFT: Normal buffer
 
 * Ftrace: Ring buffer
     * trace_pipe
 
-# Ftrace 开发实践
+# 3. Ftrace 开发实践
 
-## Filesystem tracing for broken symlink
+## 3.1. Filesystem tracing for broken symlink
 
 * 问题：F2FS 某个符号链接偶尔创建异常导致系统启动失败
     * 符号链接文件存在，但是指向为空
@@ -134,7 +140,7 @@
 * 结论：发现其他符号链接创建正常
 * 根源：异常掉电导致符号链接创建不完整并且无 f2fsck 无覆盖此类情况
 
-## Latency v.s. throughput
+## 3.2. Latency v.s. throughput
 
 * Latency tracing
     * cyclictest：长时间跑+后台负载，测试latency
@@ -156,11 +162,11 @@
     * iperf 线程化前：91／72
     * iperf 线程化后：45／39
 
-## Home Idle tracing for power jitter
+## 3.3. Home Idle tracing for power jitter
 
 \ThisCenterWallPaper{1}{images/power-supply}
 
-## Home idle tracing (Cont.)
+## 3.4. Home idle tracing (Cont.)
 
 * top: process level
 * perf top: function level
@@ -174,11 +180,11 @@
     * 快捷按键捕获后台数据
     * 根据某个触发条件自动捕获：Max, Avg
 
-## Home idle tracing (Cont.)
+## 3.5. Home idle tracing (Cont.)
 
 \ThisCenterWallPaper{1}{images/oscilloscope}
 
-## Graphic tracing for display performance tuning
+## 3.6. Graphic tracing for display performance tuning
 
 * 从应用层加跟踪点
 
@@ -193,15 +199,15 @@
 * 分析跟踪结果
     * 通过 Chrome 浏览器解析 `trace.html`
 
-## Graphic tracing (Cont.)
+## 3.7. Graphic tracing (Cont.)
 
 \ThisCenterWallPaper{1.3}{images/systrace-graphic}
 
-## Thermal tracing for board temprature control
+## 3.8. Thermal tracing for board temprature control
 
 \ThisCenterWallPaper{1}{images/temp-meature}
 
-## Thermal tracing (Cont.)
+## 3.9. Thermal tracing (Cont.)
 
 * 从内核中定义跟踪点（tracepoints）
     * `include/trace/events/thermal.h`
@@ -222,7 +228,7 @@
 
         $ systrace.py --time=10 -o trace.html temp sched gfx
 
-## Thermal tracing (Cont.)
+## 3.10. Thermal tracing (Cont.)
 
 * 在 atrace 中启用该事件
     * `frameworks/native/cmds/atrace/atrace.cpp: k_categories`
@@ -251,13 +257,13 @@
                 importer.registerEventHandler('thermal_temperature',
                 ThermalParser.prototype.thermalTemperatureEvent.bind(this));
 
-## Thermal tracing (Cont.)
+## 3.11. Thermal tracing (Cont.)
 
 \ThisCenterWallPaper{1}{images/systrace-temp}
 
-# Ftrace 在线演示
+# 4. Ftrace 在线演示
 
-## Linux Lab 介绍
+## 4.1. Linux Lab 介绍
 
 * 基于 Docker/Qemu 的嵌入式 Linux 开发环境
 * 首页：<http://tinylab.org/linux-lab>
@@ -271,11 +277,11 @@
     * 支持大量 Qemu 虚拟的开发板（免费）
     * 灵活配置、编译和引导
 
-## Linux Lab 介绍（Cont.）
+## 4.2. Linux Lab 介绍（Cont.）
 
 \ThisCenterWallPaper{1.0}{images/linux-lab}
 
-## Online Ftrace Demo
+## 4.3. Online Ftrace Demo
 
 * Doc: doc/ftrace
 
@@ -300,7 +306,7 @@
          0)   0.584 us    |            __wake_up_bit();
          0) + 16.333 us   |          }
 
-## Online KFT Demo
+## 4.4. Online KFT Demo
 
 
 * Doc: doc/kft/kft_kickstart.txt
@@ -324,7 +330,7 @@
           filter maxtime 0
           logentries 100000
 
-## Online KFT Demo (Cont.)
+## 4.5. Online KFT Demo (Cont.)
 
         # cat /proc/kft_data
          Entry    Delta     PID        Function                        Caller
@@ -343,7 +349,7 @@
          11889     1066      0.0 decode_configs                   cpu_probe
          14418     1851      0.0 cpu_probe                        setup_arch
 
-# 相关参考资料
+# 5. 相关参考资料
 
 --------------------
 
