--- a/Linux/Tools/Perf/简介.md
+++ b/Linux/Tools/Perf/简介.md
@@ -46,106 +46,24 @@ Perf是一个包含了很多子工具的工具集, 通过`perf -h`查看.
 - bench: perf中benchmark的一个通用框架。目前包括两套针对调度器和内存管理子系统的benchmark。
 - buildid-cache: 管理perf的buildid缓存。每个ELF都有一个独一无二的buildid。buildid被perf用来关联采样数据与ELF文件。
 - buildid-list: 列出采样文件中记录的所有buildid。
+- diff: 读取两个采样文件，显示每个符号（函数）在热点分析上的具体差异。
+- evlist: 列出采样文件中的所有性能事件。
+- inject: 读取perf record记录的事件流，并将其定向到标准输出。在被分析代码中的任何一点，都可以向事件流中注入其它事件。
+- kmem: 跟踪/检测内核存储（slab）的属性。
+- kvm: 跟踪运行于KVM虚拟机上的Guest的性能事件。
+- list: 列出当前系统支持的所有性能事件。
+- lock: 分析内核中的加锁情况。
+- probe: 动态定义一个tracepoint。
+- record: 根据性能事件，收集采样信息，并将其记录在采样文件中。随后可以通过其它工具来分析。
+- report: 读取并分析采样文件，并给出分析结果。
+- sched: 跟踪/监测调度器子系统的属性。
+- script: perl或python写的功能扩展脚本。
+- stat: 收集一个特定进程的性能事件。
+- test: 当前软硬件平台测试工具。可以用此工具测试当前平台（主要是处理器型号和操作系统版本）是否支持perf的所有功能。
+- timechart: 生成一个描述处理器与各进程状态变化的适量图。
+- top: 对系统性能进行实时分析。类似于Linux的Top命令。
+- trace: strace inspired tool
 
-6
-
-diff
-
-读取两个采样文件，显示每个符号（函数）在热点分析上的具体差异。
-
-7
-
-evlist
-
-列出采样文件中的所有性能事件。
-
-8
-
-inject
-
-读取perf record记录的事件流，并将其定向到标准输出。在被分析代码中的任何一点，都可以向事件流中注入其它事件。
-
-9
-
-kmem
-
-跟踪/检测内核存储（slab）的属性。
-
-10
-
-kvm
-
-跟踪运行于KVM虚拟机上的Guest的性能事件。
-
-11
-
-list
-
-列出当前系统支持的所有性能事件。
-
-12
-
-lock
-
-分析内核中的加锁情况。
-
-13
-
-probe
-
-动态定义一个tracepoint。
-
-13
-
-record
-
-根据性能事件，收集采样信息，并将其记录在采样文件中。随后可以通过其它工具来分析。
-
-14
-
-report
-
-读取并分析采样文件，并给出分析结果。
-
-15
-
-sched
-
-跟踪/监测调度器子系统的属性。
-
-16
-
-script
-
-perl或python写的功能扩展脚本。
-
-17
-
-stat
-
-收集一个特定进程的性能事件。
-
-18
-
-test
-
-当前软硬件平台测试工具。可以用此工具测试当前平台（主要是处理器型号和操作系统版本）是否支持perf的所有功能。
-
-19
-
-timechart
-
-生成一个描述处理器与各进程状态变化的适量图。
-
-20
-
-top
-
-对系统性能进行实时分析。类似于Linux的Top命令。
-
-21
-
-trace
-
-strace inspired tool
 perf中的每个工具都可以用一整篇文章来说明。
+
+通过命令`perf help COMMAND`查看.
