--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第4章 KVM管理工具/4. virt-viewer、virt-install、virt-top和libguestfs.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第4章 KVM管理工具/4. virt-viewer、virt-install、virt-top和libguestfs.md
@@ -130,6 +130,14 @@ centos7u2-1:/dev/centos/root 18307072      9764840   8542232   54%￼
 Hi. This is a text file in a Linux guest.
 ```
 
+```
+virt-copy-in -a disk.img file|dir [file|dir ...] /destination
+
+virt-copy-in -d domain file|dir [file|dir ...] /destination
+```
+
+参考: http://libguestfs.org/virt-copy-in.1.html
+
 libguestfs的一些工具用于**Windows客户机镜像**的操作时，需要先安装libguestfs\-winsupport这个软件包；
 
 当使用guestmount来挂载Windows镜像时，还需要安装ntfs\-3g软件包（可以到EPEL中找RPM，也可以自行编译安装）。下面是使用virt\-ls、virt\-cat命令对Windows客户机操作的演示：
