--- Auto-Git Commit ---

--- a/Linux/Tools/Perf/kvm/简介.md
+++ b/Linux/Tools/Perf/kvm/简介.md
@@ -1,13 +1,13 @@
 
 利用kvm子工具，我们可以在host上监测guest的性能事件。
 
-kvm子工具用法：
+# kvm子工具用法
 
 ```
 perf kvm <perf kvm args> <perf command> <perf command args>
 ```
 
-获取guest的kallsyms和modules文件
+# 获取guest的kallsyms和modules文件
 
 为了能够让kvm子工具正确解析guest的符号，我们首先需要把guest系统的/proc/kallsyms和 /proc/modules文件拷贝到host中。
 
@@ -23,12 +23,12 @@ perf kvm <perf kvm args> <perf command> <perf command args>
 
 注意：我们这里不用scp命令拷贝文件的原因是因为有时scp在拷贝guest的modules文件时会返回空文件。
 
-利用sshfs自动读取guest的kallsyms和modules文件
+# 利用sshfs自动读取guest的kallsyms和modules文件
 
 perf kvm可以利用sshfs来挂载guest的根文件系统，这样它就可以直接读取guest的kallsyms和modules文件了。
 
 sshfs需要fuse（the Filesystem in Userspace）如果你的系统中没有安装fuse，需要首先安装fuse。
-
+f
 在host中运行下列命令：
 
 ```
