--- a/Linux/Tools/Perf/kvm/简介.md
+++ b/Linux/Tools/Perf/kvm/简介.md
@@ -28,7 +28,7 @@ perf kvm <perf kvm args> <perf command> <perf command args>
 perf kvm可以利用sshfs来挂载guest的根文件系统，这样它就可以直接读取guest的kallsyms和modules文件了。
 
 sshfs需要fuse（the Filesystem in Userspace）如果你的系统中没有安装fuse，需要首先安装fuse。
-f
+
 在host中运行下列命令：
 
 ```
@@ -47,7 +47,7 @@ f
 # fusermount -u /tmp/guestmount/24764
 ```
 
-记录guest的性能事件
+# 记录guest的性能事件
 
 经过了上面的准备工作我们就可以记录guest的性能事件了，利用perf kvm record命令来记录guest的性能事件：
 
@@ -55,15 +55,13 @@ f
 # perf kvm --host --guest --guestkallsyms=/tmp/guest.kallsyms --guestmodules=/tmp/guest.modules record -a
 ```
 
-上面这个命令的意思是同时记录host和guest上所有进程的性能事件，这里默认的采样事件为cycles，我们可以用-e参数来指定我们感兴趣的采样事件。
+上面这个命令的意思是**同时记录host**和**guest**上所有进程的性能事件，这里默认的采样事件为**cycles**，我们可以用-e参数来指定我们感兴趣的采样事件。
 
 我们可以发送SIGINT命令结束采样，注意如果perf被非SIGINT指令结束，比如SIGTERM 或者SIGQUIT，那么perf kvm report命令将不能正确的解析采样文件。
 
 默认情况下，如果我们只记录host的性能事件那么生成的采样文件的名字为：perf.data.host，如果我们只记录guest的性能事件，那么生成的采样文件的名字为：perf.data.guest。如果我们同事记录host和guest的性能事件，那么生成的采样文件的名字为：perf.data.kvm。
 
- 
-
-分析guest上的性能事件
+# 分析guest上的性能事件
 
 有了上面的采样文件，我们就可以利用perf kvm report来查看性能事件了，执行以下命令：
 
@@ -77,10 +75,8 @@ f
 
 其中模块名前有guest前缀的都是guest中发生的采样事件，模块名为unknown的为guest中运行的workload，因为没有该workload的符号表，所以此处不能解析出workload的名字。其余都是host中的采样事件。
 
-如果我们仔细观察我们用来记录guest采样事件的命令就会发现，我们只能提供一个guest的kallsyms和modules文件。所以，也就只能解析一个guest的符号，当host有多个guest时，可能符号解析会出错。当然，我们也可以同时监测多个guest的性能事件，然后根据各个guest的kallsyms和modules文件手动解析这些符号。
+如果我们仔细观察我们用来记录guest采样事件的命令就会发现，我们**只能**提供**一个guest**的**kallsyms**和**modules**文件。所以，也就只能解析一个guest的符号，当host有多个guest时，可能符号解析会出错。当然，我们也可以同时监测多个guest的性能事件，然后根据各个guest的kallsyms和modules文件手动解析这些符号。
 
 将来perf kvm可能通过增加guest的PID的方式来分别指定每个guest的kallsyms和modules文件，那么，就可以正确解析每个guest的符号。
-
- 
 
 通过上面的介绍，我们可以看到，利用perf kvm子工具，我们可以方便的在host中监测guest中的性能事件，这对于我们分析guest的性能是非常方便的。Perf kvm子工具还支持其它的perf的命令，比如：stat等。
