--- Auto-Git Commit ---

--- a/Linux/Tools/Trace/Ftrace/Ftrace实现原理与开发实践/介绍与实践.md
+++ b/Linux/Tools/Trace/Ftrace/Ftrace实现原理与开发实践/介绍与实践.md
@@ -1,4 +1,40 @@
 
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [1. 什么是 Ftrace](#1-什么是-ftrace)
+  - [1.1. Linux tracing overview](#11-linux-tracing-overview)
+  - [1.2. Ftrace overview](#12-ftrace-overview)
+- [2. Ftrace 实现原理](#2-ftrace-实现原理)
+  - [2.1. Ftrace function tracer footstone: -pg](#21-ftrace-function-tracer-footstone-pg)
+  - [2.2. Dynamic function tracing](#22-dynamic-function-tracing)
+  - [2.3. Function Graph tracer](#23-function-graph-tracer)
+  - [2.4. High resolution trace clock: `sched_clock()`](#24-high-resolution-trace-clock-sched_clock)
+  - [2.5. User space tracing](#25-user-space-tracing)
+  - [2.6. More](#26-more)
+- [3. Ftrace 开发实践](#3-ftrace-开发实践)
+  - [3.1. Filesystem tracing for broken symlink](#31-filesystem-tracing-for-broken-symlink)
+  - [3.2. Latency v.s. throughput](#32-latency-vs-throughput)
+  - [3.3. Home Idle tracing for power jitter](#33-home-idle-tracing-for-power-jitter)
+  - [3.4. Home idle tracing (Cont.)](#34-home-idle-tracing-cont)
+  - [3.5. Home idle tracing (Cont.)](#35-home-idle-tracing-cont)
+  - [3.6. Graphic tracing for display performance tuning](#36-graphic-tracing-for-display-performance-tuning)
+  - [3.7. Graphic tracing (Cont.)](#37-graphic-tracing-cont)
+  - [3.8. Thermal tracing for board temprature control](#38-thermal-tracing-for-board-temprature-control)
+  - [3.9. Thermal tracing (Cont.)](#39-thermal-tracing-cont)
+  - [3.10. Thermal tracing (Cont.)](#310-thermal-tracing-cont)
+  - [3.11. Thermal tracing (Cont.)](#311-thermal-tracing-cont)
+- [4. Ftrace 在线演示](#4-ftrace-在线演示)
+  - [4.1. Linux Lab 介绍](#41-linux-lab-介绍)
+  - [4.2. Linux Lab 介绍（Cont.）](#42-linux-lab-介绍cont)
+  - [4.3. Online Ftrace Demo](#43-online-ftrace-demo)
+  - [4.4. Online KFT Demo](#44-online-kft-demo)
+  - [4.5. Online KFT Demo (Cont.)](#45-online-kft-demo-cont)
+- [5. 相关参考资料](#5-相关参考资料)
+
+<!-- /code_chunk_output -->
+
 # 1. 什么是 Ftrace
 
 ## 1.1. Linux tracing overview
