--- Auto-Git Commit ---

--- a/Linux/Tools/Trace/Ftrace/Ftrace实现原理与开发实践/介绍与实践.md
+++ b/Linux/Tools/Trace/Ftrace/Ftrace实现原理与开发实践/介绍与实践.md
@@ -45,6 +45,10 @@
 
 ![](./images/ftrace.jpg)
 
+ftrace 组成:
+
+![2020-02-03-15-04-18.png](./images/2020-02-03-15-04-18.png)
+
 # 2. Ftrace 实现原理
 
 ## 2.1. Ftrace function tracer footstone: -pg
