--- Auto-Git Commit ---

--- a/Linux/Tools/Trace/Ftrace/Ftrace实现原理与开发实践/介绍与实践.md
+++ b/Linux/Tools/Trace/Ftrace/Ftrace实现原理与开发实践/介绍与实践.md
@@ -49,6 +49,8 @@ ftrace 组成:
 
 ![2020-02-03-15-04-18.png](./images/2020-02-03-15-04-18.png)
 
+Ftrace 有两大组成部分，一是 framework，另外就是一系列的 tracer 。每个 tracer 完成不同的功能，它们统一由 framework 管理。 ftrace 的 trace 信息保存在 ring buffer 中，由 framework 负责管理。 Framework 利用 debugfs 系统在 /debugfs 下建立 tracing 目录，并提供了一系列的控制文件。
+
 # 2. Ftrace 实现原理
 
 ## 2.1. Ftrace function tracer footstone: -pg
@@ -111,7 +113,7 @@ ftrace 组成:
     * 32 位转 64 位
 
 ```
-        include/linux/cnt32_to_63.h: cnt32_to_63()
+include/linux/cnt32_to_63.h: cnt32_to_63()
 ```
 
 * 稳定性
