--- Auto-Git Commit ---

--- a/Linux/Tools/Trace/Ftrace/Ftrace实现原理与开发实践/介绍与实践.md
+++ b/Linux/Tools/Trace/Ftrace/Ftrace实现原理与开发实践/介绍与实践.md
@@ -77,6 +77,23 @@ Ftrace 有两大组成部分，一是 framework，另外就是一系列的 trace
           lw $25,%call16(__cyg_profile_func_enter)($28)
           lw $25,%call16(__cyg_profile_func_exit)($28)
 ```
+
+Ftrace 采用 GCC 的 `profile` 特性在**所有内核函数的开始部分**加入一段 **stub 代码**，ftrace **重载这段代码**来实现 trace 功能。
+
+gcc 的 `-pg` 选项将在**每个函数入口处**加入对 mcount 的调用代码。比如下面的 C 代码。
+
+清单 1. test.c
+
+```cpp
+//test.c 
+void foo(void)
+{
+    printf("foo");
+}
+```
+
+
+
 ## 2.2. Dynamic function tracing
 
 以 MIPS 为例：`arch/mips/kernel/ftrace.c`
