--- Auto-Git Commit ---

--- a/Linux/Tools/Trace/Ftrace/Ftrace实现原理与开发实践/介绍与实践.md
+++ b/Linux/Tools/Trace/Ftrace/Ftrace实现原理与开发实践/介绍与实践.md
@@ -133,10 +133,102 @@ foo:
 再加入 `-gp` 选项编译：
 
 ```
-gcc –pg –S test.c
+gcc -pg -S test.c -o test.s
 ```
 
+得到的汇编如下：
+
+清单 3. test.c 加入 pg 选项后的汇编代码
+
+```asm
+	.file	"test.c"
+	.section	.rodata
+.LC0:
+	.string	"foo"
+	.text
+	.globl	foo
+	.type	foo, @function
+foo:
+.LFB0:
+	.cfi_startproc
+	pushq	%rbp
+	.cfi_def_cfa_offset 16
+	.cfi_offset 6, -16
+	movq	%rsp, %rbp
+	.cfi_def_cfa_register 6
+	call	mcount
+	movl	$.LC0, %edi
+	movl	$0, %eax
+	call	printf
+	popq	%rbp
+	.cfi_def_cfa 7, 8
+	ret
+	.cfi_endproc
+.LFE0:
+	.size	foo, .-foo
+	.ident	"GCC: (GNU) 4.8.5 20150623 (Red Hat 4.8.5-39)"
+	.section	.note.GNU-stack,"",@progbits
+```
+
+增加 `-pg` 选项后，gcc 在函数 foo 的**入口处**加入了对 `mcount` 的调用：call _mcount 。原本 mcount 由 libc 实现，但内核不会连接 libc 库，因此 ftrace 编写了自己的 mcount stub 函数，并借此实现 trace 功能。
+
 ## 2.2. Dynamic function tracing
+
+在每个内核函数入口加入 trace 代码，必然会**影响内核的性能**，为了减小对内核性能的影响，ftrace 支持**动态** trace 功能。
+
+当 `CONFIG_DYNAMIC_FTRACE` 被选中后，内核编译时会调用一个 perl 脚本：recordmcount.pl 将每个函数的地址写入一个特殊的段：__mcount_loc
+
+在内核初始化的初期，ftrace 查询 __mcount_loc 段，得到每个函数的入口地址，并将 mcount 替换为 nop 指令。这样在默认情况下，ftrace 不会对内核性能产生影响。
+
+当用户打开 ftrace 功能时，ftrace 将这些 nop 指令动态替换为 ftrace_caller，该函数将调用用户注册的 trace 函数。其具体的实现在相应 arch 的汇编代码中，以 x86 为例，在 entry_32.s 中：
+
+清单 4. entry_32.s
+
+```
+    ENTRY(ftrace_caller) 
+
+    cmpl $0, function_trace_stop 
+
+    jne  ftrace_stub 
+
+    pushl %eax 
+
+    pushl %ecx 
+
+    pushl %edx 
+
+    movl 0xc(%esp), %eax 
+
+    movl 0x4(%ebp), %edx 
+
+    subl $MCOUNT_INSN_SIZE, %eax 
+
+.globl ftrace_call 
+
+ftrace_call: 
+
+    call ftrace_stubline 10
+popl %edx 
+
+    popl %ecx 
+
+    popl %eax 
+
+
+.globl ftrace_stub 
+
+ftrace_stub: 
+
+    ret 
+
+END(ftrace_caller)
+```
+
+Function tracer 将 line10 这行代码替换为 function_trace_call() 。这样每个内核函数都将调用 function_trace_call() 。
+
+在 function_trace_call() 函数内，ftrace 记录函数调用堆栈信息，并将结果写入 ring buffer，稍后，用户可以通过 debugfs 的 trace 文件读取该 ring buffer 中的内容。
+
+
 
 以 MIPS 为例：`arch/mips/kernel/ftrace.c`
 
@@ -461,7 +553,7 @@ include/linux/cnt32_to_63.h: cnt32_to_63()
 
 # 5. 相关参考资料
 
---------------------
+https://www.cnblogs.com/jefree/p/4439013.html 没有摘抄完
 
 * [KFT](http://elinux.org/Using_Kernel_Function_Trace)
 * [Ftrace](http://www.ibm.com/developerworks/cn/linux/l-cn-ftrace/index.html)
