--- Auto-Git Commit ---

--- a/Virtualization/Tools/测试虚拟机构建.md
+++ b/Virtualization/Tools/测试虚拟机构建.md
@@ -39,6 +39,12 @@ service tftp
 
 修改项`server_args= -s <path> -c`，其中`<path>`处可以改为你的`tftp-server`的根目录，参数`-s`指定`chroot`，`-c`指定了可以创建文件。
 
+修改权限
+
+```
+chmod 777 -R /data/tftpboot
+```
+
 启动host上tftp服务
 
 ```
