--- Auto-Git Commit ---

--- a/Linux/Tools/rt-tests/cyclictest/简介.md
+++ b/Linux/Tools/rt-tests/cyclictest/简介.md
@@ -221,7 +221,7 @@ either run as root or join realtime group
 ```
 
 ```
-./cyclictest -a 1 -n -p 99 -i 1000 -l 1000 -t 1 -D 100 -h 30 -q
+./cyclictest -a 1 -p 99 -i 1000 -l 1000 -t 1 -D 100 -h 30 -q
 ```
 
 # 4. 参考
