--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/1. 环境及工具.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/1. 环境及工具.md
@@ -1,5 +1,23 @@
 
-# 平台信息和状态
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [1. 平台信息和状态](#1-平台信息和状态)
+  - [1.1. 处理器编号](#11-处理器编号)
+  - [1.2. 运行阶段](#12-运行阶段)
+  - [1.3. 处理器个数](#13-处理器个数)
+  - [1.4. 处理器模型](#14-处理器模型)
+  - [1.5. VMX开启](#15-vmx开启)
+  - [1.6. EPT开启](#16-ept开启)
+- [2. 使用VMware](#2-使用vmware)
+- [3. 使用Bochs](#3-使用bochs)
+- [4. 在真实机器上运行](#4-在真实机器上运行)
+- [5. Build工具](#5-build工具)
+
+<!-- /code_chunk_output -->
+
+# 1. 平台信息和状态
 
 以4个逻辑处理器平台为例, 机器启动后最终进入一个等待状态, 如图.
 
@@ -9,13 +27,13 @@
 
 图1-1所显示的信息是处理器最后调用`updata_system_status`例程的结果, 它输出当前系统的信息, 在`lib/crt.asm`模块里实现.
 
-## 处理器编号
+## 1.1. 处理器编号
 
 **CPUIndex**指示处理器的编号, 从0开始编号.
 
 在PCB(Processor Control Block, 处理器控制块)结构中的ProcessorIndex记录.
 
-## 运行阶段
+## 1.2. 运行阶段
 
 **Stage**指示系统当前运行在哪个阶段. 系统平台分为三个阶段(参见第1.5节).
 
@@ -25,29 +43,29 @@
 
 图1\-1显示, 处理器当前处于stage3阶段(64位模式).
 
-## 处理器个数
+## 1.3. 处理器个数
 
 CPUs 指示当前可用的处理器个数, 这是在启动阶段检测出来的. 实际上, 使用代码枚举出来更可靠. 因为, 存在**BIOS关闭某些处理器**的可能性.
 
 图显示, 有4个可用的逻辑处理器
 
-## 处理器模型
+## 1.4. 处理器模型
 
 CpuModel 指示处理器的模型信息, 包括了处理器家族与型号. 显示当前处理器是 0625H. 06H指P6家族(包括了Core家族), 25H属于第1代的Core架构, 具体为Westmere架构.
 
-## VMX开启
+## 1.5. VMX开启
 
 VMX enable 指示VMX模式已经开启, VMX disable则指示VMX模式关闭. 
 
 实际上, 每个处理器都开启了VMX模式. 由调用`vmx_operation_enter`函数进入, 实现在`lib/Vmx/VmxInit.asm`.
 
-## EPT开启
+## 1.6. EPT开启
 
 EPT enable指示EPT映射机制已经开启.
 
 处理器在进入guest前, 根绝guest的设置决定是否开启EPT映射机制.
 
-# 使用VMware
+# 2. 使用VMware
 
 多数例子可以运行在VMware中, 只有少数需要在真实机器上运行. 
 
@@ -71,13 +89,13 @@ EPT enable指示EPT映射机制已经开启.
 
 ![2019-12-28-18-29-28.png](./images/2019-12-28-18-29-28.png)
 
-# 使用Bochs
+# 3. 使用Bochs
 
 Bochs只支持基本的VMX特性. 所以不使用
 
-# 在真实机器上运行
+# 4. 在真实机器上运行
 
 在后面看到, 实现了一个Build工具, 用于编译和生成所需的映像文件. 其中包括写入物理U盘, 我们将使用U盘启动, 在真实机器上运行.
 
-# Build工具
+# 5. Build工具
 
