--- Auto-Git Commit ---

--- a/Architecture/x86/Learning/x86汇编语言_从实模式到保护模式/第一部分 预备知识/4. 虚拟机的安装和使用/2. 创建和使用虚拟机.md
+++ b/Architecture/x86/Learning/x86汇编语言_从实模式到保护模式/第一部分 预备知识/4. 虚拟机的安装和使用/2. 创建和使用虚拟机.md
@@ -1,8 +1,16 @@
+# 虚拟机是软件
+
+# 下载安装Oracle VM VirtualBox
+
 使用Oracle VM VirtualBox，虚拟硬盘使用固定尺寸的 VHD。
 
 VHD 规范最早起源于Connectix 公司的虚拟机软件 Connectix Virtual PC，2003 年，微软公司收购了它并改名为 Microsoft Virtual PC。2006 年，微软公司正式发布了 VHD 虚拟硬盘格式规范。
 
-## 2.5 虚拟硬盘简介
+VDI是VirtualBox自己的虚拟硬盘规范, VMDK是VMware的虚拟硬盘规范. 本书例子使用"VHD(Virtual Hard Disk)".
+
+VHD也分为两种类型: 固定尺寸和动态分配的. 本书使用固定尺寸的VHD.
+
+## 虚拟硬盘简介
 
 采用**固定尺寸的VHD虚拟硬盘**，因为其**简单性**。它**仅包含两部分**，前面是**数据区**，用来**模拟实际的硬盘空间**，后面跟一个**512字节的结尾**。（2004年前规范是511字节）
 
