--- Auto-Git Commit ---

--- a/Hided/Operating System/CodeOS/Documents/1. 环境配置.md
+++ b/Hided/Operating System/CodeOS/Documents/1. 环境配置.md
@@ -1,14 +1,14 @@
-## 1. 系统选择
+# 1. 系统选择
 
 工作环境基于Linux系统
 
-## 2. 开发工具
+# 2. 开发工具
 
 开发主要使用C语言，涉及部分汇编代码，包括
 
 C语言编译器使用GCC，链接器是ld，构建工具使用GNU make。汇编编译器使用nasm
 
-## 3. 运行环境
+# 3. 运行环境
 
 使用qemu虚拟机，可以使用qemu和gdb联合调试。
 
@@ -24,9 +24,9 @@ yum install qemu
 ln -s /usr/bin/qemu-system-i386 /usr/bin/qemu
 ```
 
-## 4. 脚本
+# 4. 脚本
 
-#### Makefile
+## 4.1. Makefile
 
 编译时使用的Makefile。
 
@@ -94,7 +94,7 @@ debug:
     cgdb -x tools/gdbinit
 ```
 
-#### kernel.ld
+## 4.2. kernel.ld
 
 项目初步采用的链接器脚本的定义。
 
