--- a/Hided/Operating System/Learning/Orange's: 一个操作系统的实现/上篇/第1章 马上动手写一个最小的操作系统/3. 引导扇区.md
+++ b/Hided/Operating System/Learning/Orange's: 一个操作系统的实现/上篇/第1章 马上动手写一个最小的操作系统/3. 引导扇区.md
@@ -5,6 +5,6 @@
 
 我们知道，当计算机**电源被打开**时，它会先进行**加电自检（POST**），然后**寻找启动盘**，如果是选择从**软盘启动**，计算机就会检查**软盘的0面0磁道1扇区**，如果发现它以`0xAA55`结束，则BIOS认为它是**一个引导扇区**。当然，一个正确的引导扇区除了以0xAA55结束之外，还应该包含一段**少于512字节的执行码**。
 
-一旦BIOS发现了**引导扇区**，就会将这512字节的内容装载到内存地址0000:7c00处，然后跳转到0000:7c00处将控制权彻底交给这段引导代码。到此为止，计算机不再由BIOS中固有的程序来控制，而变成由操作系统的一部分来控制。
+一旦**BIOS**发现了**引导扇区**，就会将这**512字节的内容**装载到内存地址`0000:7c00`处，然后跳转到`0000:7c00`处**将控制权彻底交给这段引导代码**。到此为止，计算机不再由BIOS中固有的程序来控制，而变成由**操作系统的一部分来控制**。
 
-现在，你可能明白了为什么在那段代码的第一行会出现“org07c00”这样的代码。没错，这行代码就是告诉编译器，将来我们的这段程序要被加载到内存偏移地址0x7c00处。好了，下面将对代码的其他部分进行详细解释。
+现在，你可能明白了为什么在那段代码的第一行会出现“`org07c00`”这样的代码。没错，这行代码就是**告诉编译器**，将来我们的这段程序要**被加载到内存偏移地址0x7c00处**。好了，下面将对代码的其他部分进行详细解释。
