--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第2篇 KVM虚拟化进阶/第9章 其它高级功能/5. qemu命令行参数.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第2篇 KVM虚拟化进阶/第9章 其它高级功能/5. qemu命令行参数.md
@@ -162,7 +162,7 @@ qemu-system-x86_64 [options] [disk_image]
 
 （3）\-boot参数
 
-设置客户机启动时的各种选项（包括启动顺序等），如：在介绍客户机系统的安装时，使用到“\-boot order=dc-hda rhel7.img \-cdrom rhel7.iso”参数，让rhel7.img（未安装系统）文件作为IDE磁盘，安装光盘rhel7.iso作为IDE光驱，并且从光盘启动客户机，从而让客户机进入系统安装的流程中。
+设置客户机启动时的各种选项（包括启动顺序等），如：在介绍客户机系统的安装时，使用到`“-boot order=dc -hda rhel7.img -cdrom rhel7.iso”`参数，让rhel7.img（未安装系统）文件作为IDE磁盘，安装光盘rhel7.iso作为IDE光驱，并且从光盘启动客户机，从而让客户机进入系统安装的流程中。
 
 ## 1.5. 网络相关的参数
 
