--- a/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/1. 项目概述和开发环境配置.md
+++ b/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/1. 项目概述和开发环境配置.md
@@ -3,14 +3,14 @@
 
 <!-- code_chunk_output -->
 
-- [选择工作环境](#选择工作环境)
-- [选择开发语言](#选择开发语言)
-- [选择开发工具](#选择开发工具)
-- [开发中用到的脚本文件](#开发中用到的脚本文件)
-  - [Makefile](#makefile)
-  - [kernel.ld](#kernelld)
-  - [bochs 虚拟机的配置文件](#bochs-虚拟机的配置文件)
-- [相关说明](#相关说明)
+- [1. 选择工作环境](#1-选择工作环境)
+- [2. 选择开发语言](#2-选择开发语言)
+- [3. 选择开发工具](#3-选择开发工具)
+- [4. 开发中用到的脚本文件](#4-开发中用到的脚本文件)
+  - [4.1. Makefile](#41-makefile)
+  - [4.2. kernel.ld](#42-kernelld)
+  - [4.3. bochs 虚拟机的配置文件](#43-bochs-虚拟机的配置文件)
+- [5. 相关说明](#5-相关说明)
 
 <!-- /code_chunk_output -->
 
@@ -20,7 +20,7 @@
 
 言归正传，开始我们的征程吧。什么？你已经迫不及待的打开编辑器准备写代码了？别着急，工欲善其事，必先利其器。我们先来阐述下开发环境和相关的工具配置。
 
-# 选择工作环境
+# 1. 选择工作环境
 
 Windows 和 Linux之争由来已久，我不想在这篇文档里针对这个问题再费口舌。我们的工作环境也**选择Linux**，对于Windows用户而言只能说声抱歉了。使用Linux的原因很简单，这里有可以自由使用的一系列的开源软件能很好的协助我们的开发和调试工作，而在Windows下缺乏相应的免费工具[^2]。
 
@@ -47,11 +47,11 @@ Windows 和 Linux之争由来已久，我不想在这篇文档里针对这个问
 
 相信这个体验会对你以后的学习生涯带来很多难以估量的好处。当你在学习计算机原理的时候，你对计算机的理解将不再是浅浅的浮于表面的概括，而是深刻的掌握了机器运行的基本原理。那些看似枯燥的理论和概念在你的眼里将是鲜活且富有生机的。相比较一般的用户只是使用计算机而言，我们却在自己的机器上写出了一个可以运行的操作系统内核。这难道不是一件很酷、很Geek、很好玩的事情吗？
 
-# 选择开发语言
+# 2. 选择开发语言
 
 我们解决了工作环境的问题，接下来是语言的选择了。如果我说是汇编语言的话，恐怕很多读者已经彻底失去了读下去的勇气了。但是没有办法，有的地方确实需要使用**汇编语言**去实现。但是聪明的读者已经注意到前文提到了**C语言**，没错，很大程度上的代码使用C语言来实现。所以不用过于担心，这个项目不会太难的。
 
-# 选择开发工具
+# 3. 选择开发工具
 
 接着是选择开发使用的工具了，这个我简单的列出来吧。首先**C语言的编译器**肯定使用**gcc**，**链接器**自然也就是**ld**了。同时大项目自然也少不了**GNU make**这个**构建工具**了。至于**汇编编译器**我们选择**nasm**这个开源免费的编译器，以便使用大多数读者习惯的**Intel风格的汇编语法**。不过考虑到需要在一些C语言代码中内联汇编指令，而**gcc**使用的是**AT&T风格**的汇编语法，所以大家还是需要掌握一部分的AT&T风格的语法的。不过这个倒不必担心，随意Google一下就有好多的资料可以学习。这些就是开发使用的多数工具了，其他的工具我会在使用的时候再介绍。
 
@@ -81,9 +81,9 @@ Ubuntu 之类的debian系列的发行版是以下命令：
 
 大家可以根据自己实际的软件安装目录去配置。
 
-# 开发中用到的脚本文件
+# 4. 开发中用到的脚本文件
 
-## Makefile
+## 4.1. Makefile
 
 首先是**编译时使用的Makefile**。需要强调的是，这个Makefile在我们整个项目的进程中几乎不会被修改。所以学会它就等于学会了整个内核项目的编译方式，很划算哦。
 [^7] [^8]
@@ -152,7 +152,7 @@ Ubuntu 之类的debian系列的发行版是以下命令：
         cgdb -x tools/gdbinit
 ```
 
-## kernel.ld
+## 4.2. kernel.ld
 
 接下来是项目**初步**采用的**链接器脚本**的定义。
 
@@ -228,7 +228,7 @@ GCC
 你也可以按照这个目录来放置代码，这样会比较清晰。至于项目名称，既然是我们自己写，那就由我们自己随意取名啦。
 [^11]
 
-## bochs 虚拟机的配置文件
+## 4.3. bochs 虚拟机的配置文件
 
 我遵守承诺，给bochs的读者提供一份bochs的配置参考。其实熟悉bochs的读者估计都比我写的好，根本用不到我这个班门弄斧的配置。
 [^12]
@@ -269,7 +269,7 @@ GCC
 
 这里要注意的是：一般来说各大Linux发行版软件源里自带的bochs没有开启gdb的联合调试功能。这就需要我们自己下载源代码编译，具体的方式请有需要的读者自行上网检索。不过我还是推荐使用qemu，毕竟没有人会和简单过不去，不是吗？
 
-# 相关说明
+# 5. 相关说明
 
 [^1]: 这篇教程很大程度上来自《JamesM’s kernel development tutorials》这篇文档，感谢原作者的辛勤劳动。相较而言我的工作在很大的程度上只是转述和查证。
 
