--- a/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/1. 项目概述和开发环境配置.md
+++ b/Hided/Operating System/Learning/hurlex-x86架构的内核Demo实现/1. 项目概述和开发环境配置.md
@@ -204,10 +204,8 @@ Ubuntu 之类的debian系列的发行版是以下命令：
 
 这个脚本告诉ld程序如何构造我们所需的内核映像文件。
 
-首先，脚本声明了内核程序的入口地址是符号 “start”
-。然后声明了段起始位置0x100000（1MB），接着是第一个段.text段（代码段）、已初始化数据段.data、未初始化数据段.bss以及它们采用的4096的页对齐方式。Linux
-GCC
-增加了额外的数据段.rodata，这是一个只读的已初始化数据段，放置常量什么的。另外为了简单起见，我们把.rodata段和.data段放在了一起。最后的stab和stabstr段暂时无需关注，等到后面讲到调试信息的时候就会明白。
+首先，脚本声明了**内核程序的入口地址**是符号 `“start”`
+。然后声明了**段起始位置**`0x100000（1MB）`，接着是第一个段`.text`段（代码段）、已初始化数据段`.data`、未初始化数据段`.bss`以及它们采用的`4096`的页对齐方式。**Linux GCC**增加了**额外的数据段**`.rodata`，这是一个**只读的已初始化数据段**，放置**常量**什么的。另外为了简单起见，我们把`.rodata`段和`.data`段放在了一起。最后的`stab`和`stabstr`段暂时无需关注，等到后面讲到**调试信息**的时候就会明白。
 
 如果你对这里的ld链接器的脚本不是很理解也不是很重要，只要**理解了脚本表示的意思**就好。
 [^9] [^10]
