--- Auto-Git Commit ---

--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -1,4 +1,21 @@
 
+详细的流程在经典的《Linkers and Loaders》和《深入理解计算机系统》中均有描述，也有国产的诸如《程序员的自我修养——链接、装载与库》等大牛著作。
+
+我的环境：Fedora 16 i686 kernel-3.6.11-4 gcc 4.6.3
+
+在正式开始我们的描述前，我们先来引出几个问题：
+
+1. C语言代码为什么要编译后才能执行？整个过程中编译器都做了什么？
+2. C代码中经常会包含头文件，那头文件是什么？C语言库又是什么？
+3. 有人说main函数是C语言程序的入口，是这样吗？难道就不能把其它函数当入口？
+4. 不同的操作系统上编译好的程序可以直接拷贝过去运行吗？
+
+我们就以最经典的HelloWorld程序为例开始吧。
+
+我们先使用vim等文本编辑器写好代码，接着在终端执行命令 `gcc HelloWorld.c -o HelloWorld` 输出了可执行文件HelloWorld，最后我们在终端执行 `./HelloWorld`，顺利地显示了输出结果。
+
+
+
 # 参考
 
 http://www.0xffffff.org/2013/04/05/16-complier-and-linker-1/
