--- Auto-Git Commit ---

--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -16,7 +16,12 @@
 
 ```
 [root@lihaiwei cpptest]# vim HelloWorld.c
+#include <stdio.h>
 
+int main(void)
+{
+	printf("Hello World\n");
+}
 [root@lihaiwei cpptest]# gcc HelloWorld.c -o HelloWorld
 [root@lihaiwei cpptest]# ./HelloWorld
 Hello World
@@ -59,11 +64,24 @@ COLLECT_GCC_OPTIONS='-v' '-o' 'HelloWorld' '-mtune=generic' '-march=x86-64'
  /usr/libexec/gcc/x86_64-redhat-linux/4.8.5/collect2 --build-id --no-add-needed --eh-frame-hdr --hash-style=gnu -m elf_x86_64 -dynamic-linker /lib64/ld-linux-x86-64.so.2 -o HelloWorld /usr/lib/gcc/x86_64-redhat-linux/4.8.5/../../../../lib64/crt1.o /usr/lib/gcc/x86_64-redhat-linux/4.8.5/../../../../lib64/crti.o /usr/lib/gcc/x86_64-redhat-linux/4.8.5/crtbegin.o -L/usr/lib/gcc/x86_64-redhat-linux/4.8.5 -L/usr/lib/gcc/x86_64-redhat-linux/4.8.5/../../../../lib64 -L/lib/../lib64 -L/usr/lib/../lib64 -L/usr/lib/gcc/x86_64-redhat-linux/4.8.5/../../.. /tmp/ccf99PWJ.o -lgcc --as-needed -lgcc_s --no-as-needed -lc -lgcc --as-needed -lgcc_s --no-as-needed /usr/lib/gcc/x86_64-redhat-linux/4.8.5/crtend.o /usr/lib/gcc/x86_64-redhat-linux/4.8.5/../../../../lib64/crtn.o
 ```
 
+![2020-02-07-15-00-06.png](./images/2020-02-07-15-00-06.png)
+
 可以自己试验然后试着分析整个流程。
 
 一图胜千言，我们先上一张图吧。这是gcc编译过程的分解图.
 
 ![2020-02-07-14-56-31.png](./images/2020-02-07-14-56-31.png)
+
+gcc处理HelloWorld.c的大致过程：
+
+>预处理(Prepressing)—>编译(Compilation)—>汇编(Assembly)—>链接(Linking)
+
+括号中我注明了各个过程中实际执行任务的程序名称：`预处理器cpp`、`编译器cc1`、`汇编器as`以及最后的`链接器ld`。
+
+我们一步一步来看，首先是预处理，我们看看预处理阶段对代码进行了哪些处理。
+
+我们在终端输入指令 gcc -E HelloWorld.c -o HelloWorld.i，然后我们打开输出文件。
+
 
 # 参考
 
