--- Auto-Git Commit ---

--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -80,7 +80,8 @@ gcc处理HelloWorld.c的大致过程：
 
 我们一步一步来看，首先是预处理，我们看看预处理阶段对代码进行了哪些处理。
 
-我们在终端输入指令 gcc -E HelloWorld.c -o HelloWorld.i，然后我们打开输出文件。
+我们在终端输入指令 `gcc -E HelloWorld.c -o HelloWorld.i`，然后我们打开输出文件。
+
 
 
 # 参考
