--- Auto-Git Commit ---

--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -82,6 +82,21 @@ gcc处理HelloWorld.c的大致过程：
 
 我们在终端输入指令 `gcc -E HelloWorld.c -o HelloWorld.i`，然后我们打开输出文件。
 
+![2020-02-07-15-19-27.png](./images/2020-02-07-15-19-27.png)
+
+首先是大段大段的**变量和函数的声明**，汗..我们的代码哪里去了？我们在vim的普通模式中按下shift+g(大写G)来到最后，终于在几千行以后看到了我们可怜兮兮的几行代码。
+
+![2020-02-07-15-22-04.png](./images/2020-02-07-15-22-04.png)
+
+前面几千行是什么呢？其实它就是 `/usr/include/stdio.h` 文件的所有内容，预处理器把所有的`#include`**替换**为**实际文件的内容**了。这个过程是**递归进行**的，所以`stdio.h`里面的`#include`也**被实际内容所替换**了。
+
+而且`HelloWorld.c`里面的**所有注释被预处理器全部删除**了。就连`printf语句`前的`Tab缩进`也被**替换为一个空格**了，显得代码都不美观了。
+
+我直接给出预处理器处理的大致范围吧。
+
+```
+
+```
 
 
 # 参考
