--- Auto-Git Commit ---

--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -94,9 +94,14 @@ gcc处理HelloWorld.c的大致过程：
 
 我直接给出预处理器处理的大致范围吧。
 
-```
+* 展开所有的宏定义并删除 `#define`
+* 处理所有的条件编译指令，例如 #if #else #endif #ifndef …
+* 把所有的 #include 替换为头文件实际内容，递归进行
+* 把所有的注释 // 和 / / 替换为空格
+* 添加行号和文件名标识以供编译器使用
+* 保留所有的 #pragma 指令，因为编译器要使用
+* ……
 
-```
 
 
 # 参考
