--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -106,11 +106,80 @@ gcc处理HelloWorld.c的大致过程：
 
 前文中我们提到了**头文件**中放置的是**变量定义**和**函数声明**等等内容。这些到底是什么东西呢？
 
-其实在**比较早**的时候**调用函数并不需要声明**，后来因为“笔误”之类的错误实在太多，造成了链接期间的错误过多，**所有编译器**开始要求对**所有使用的变量或者函数**给出**声明**，以支持编译器进行**参数检查**和**类型匹配**。**头文件**包含的基本上就是**这些东西**和**一些预先的宏定义**来方便程序员编程。其实对于我们的`HelloWorld.c`程序来说不需要这个庞大的头文件，只需要在**main函数前**声明printf函数，不需要`#include<stdio.h>`即可通过编译。
+其实在**比较早**的时候**调用函数并不需要声明**，后来因为“笔误”之类的错误实在太多，造成了链接期间的错误过多，**所有编译器**开始要求对**所有使用的变量或者函数**给出**声明**，以支持编译器进行**参数检查**和**类型匹配**。**头文件**包含的基本上就是**这些东西**和**一些预先的宏定义**来方便程序员编程。
+
+其实对于我们的`HelloWorld.c`程序来说**不需要这个庞大的头文件**，只需要在**main函数前**声明printf函数，不需要`#include<stdio.h>`即可通过编译。
+
+```cpp
+int printf(const char *format, ...);
+```
 
 ```
-int printf(cons)
+# cat HelloWorld.c
+int printf(const char *format, ...);
+int main(void)
+{
+	printf("Hello World\n");
+}
+
+# gcc -v HelloWorld.c -o HelloWorld
+Using built-in specs.
+COLLECT_GCC=gcc
+COLLECT_LTO_WRAPPER=/usr/libexec/gcc/x86_64-redhat-linux/4.8.5/lto-wrapper
+Target: x86_64-redhat-linux
+Configured with: ../configure --prefix=/usr --mandir=/usr/share/man --infodir=/usr/share/info --with-bugurl=http://bugzilla.redhat.com/bugzilla --enable-bootstrap --enable-shared --enable-threads=posix --enable-checking=release --with-system-zlib --enable-__cxa_atexit --disable-libunwind-exceptions --enable-gnu-unique-object --enable-linker-build-id --with-linker-hash-style=gnu --enable-languages=c,c++,objc,obj-c++,java,fortran,ada,go,lto --enable-plugin --enable-initfini-array --disable-libgcj --with-isl=/builddir/build/BUILD/gcc-4.8.5-20150702/obj-x86_64-redhat-linux/isl-install --with-cloog=/builddir/build/BUILD/gcc-4.8.5-20150702/obj-x86_64-redhat-linux/cloog-install --enable-gnu-indirect-function --with-tune=generic --with-arch_32=x86-64 --build=x86_64-redhat-linux
+Thread model: posix
+gcc version 4.8.5 20150623 (Red Hat 4.8.5-39) (GCC)
+COLLECT_GCC_OPTIONS='-v' '-o' 'HelloWorld' '-mtune=generic' '-march=x86-64'
+ /usr/libexec/gcc/x86_64-redhat-linux/4.8.5/cc1 -quiet -v HelloWorld.c -quiet -dumpbase HelloWorld.c -mtune=generic -march=x86-64 -auxbase HelloWorld -version -o /tmp/ccACFg1Y.s
+GNU C (GCC) version 4.8.5 20150623 (Red Hat 4.8.5-39) (x86_64-redhat-linux)
+	compiled by GNU C version 4.8.5 20150623 (Red Hat 4.8.5-39), GMP version 6.0.0, MPFR version 3.1.1, MPC version 1.0.1
+GGC heuristics: --param ggc-min-expand=100 --param ggc-min-heapsize=131072
+ignoring nonexistent directory "/usr/lib/gcc/x86_64-redhat-linux/4.8.5/include-fixed"
+ignoring nonexistent directory "/usr/lib/gcc/x86_64-redhat-linux/4.8.5/../../../../x86_64-redhat-linux/include"
+#include "..." search starts here:
+#include <...> search starts here:
+ /usr/lib/gcc/x86_64-redhat-linux/4.8.5/include
+ /usr/local/include
+ /usr/include
+End of search list.
+GNU C (GCC) version 4.8.5 20150623 (Red Hat 4.8.5-39) (x86_64-redhat-linux)
+	compiled by GNU C version 4.8.5 20150623 (Red Hat 4.8.5-39), GMP version 6.0.0, MPFR version 3.1.1, MPC version 1.0.1
+GGC heuristics: --param ggc-min-expand=100 --param ggc-min-heapsize=131072
+Compiler executable checksum: edd9a53947039836c859e437e8c9af72
+COLLECT_GCC_OPTIONS='-v' '-o' 'HelloWorld' '-mtune=generic' '-march=x86-64'
+ as -v --64 -o /tmp/ccKBm26a.o /tmp/ccACFg1Y.s
+GNU assembler version 2.27 (x86_64-redhat-linux) using BFD version version 2.27-41.base.el7_7.1
+COMPILER_PATH=/usr/libexec/gcc/x86_64-redhat-linux/4.8.5/:/usr/libexec/gcc/x86_64-redhat-linux/4.8.5/:/usr/libexec/gcc/x86_64-redhat-linux/:/usr/lib/gcc/x86_64-redhat-linux/4.8.5/:/usr/lib/gcc/x86_64-redhat-linux/
+LIBRARY_PATH=/usr/lib/gcc/x86_64-redhat-linux/4.8.5/:/usr/lib/gcc/x86_64-redhat-linux/4.8.5/../../../../lib64/:/lib/../lib64/:/usr/lib/../lib64/:/usr/lib/gcc/x86_64-redhat-linux/4.8.5/../../../:/lib/:/usr/lib/
+COLLECT_GCC_OPTIONS='-v' '-o' 'HelloWorld' '-mtune=generic' '-march=x86-64'
+ /usr/libexec/gcc/x86_64-redhat-linux/4.8.5/collect2 --build-id --no-add-needed --eh-frame-hdr --hash-style=gnu -m elf_x86_64 -dynamic-linker /lib64/ld-linux-x86-64.so.2 -o HelloWorld /usr/lib/gcc/x86_64-redhat-linux/4.8.5/../../../../lib64/crt1.o /usr/lib/gcc/x86_64-redhat-linux/4.8.5/../../../../lib64/crti.o /usr/lib/gcc/x86_64-redhat-linux/4.8.5/crtbegin.o -L/usr/lib/gcc/x86_64-redhat-linux/4.8.5 -L/usr/lib/gcc/x86_64-redhat-linux/4.8.5/../../../../lib64 -L/lib/../lib64 -L/usr/lib/../lib64 -L/usr/lib/gcc/x86_64-redhat-linux/4.8.5/../../.. /tmp/ccKBm26a.o -lgcc --as-needed -lgcc_s --no-as-needed -lc -lgcc --as-needed -lgcc_s --no-as-needed /usr/lib/gcc/x86_64-redhat-linux/4.8.5/crtend.o /usr/lib/gcc/x86_64-redhat-linux/4.8.5/../../../../lib64/crtn.o
+
+# ./HelloWorld
+Hello World
 ```
+
+查看`gcc -E HelloWorld.c -o HelloWorld.i`
+
+```
+# cat HelloWorld.i
+# 1 "HelloWorld.c"
+# 1 "<built-in>"
+# 1 "<command-line>"
+# 1 "/usr/include/stdc-predef.h" 1 3 4
+# 1 "<command-line>" 2
+# 1 "HelloWorld.c"
+int printf(const char *format, ...);
+int main(void)
+{
+ printf("Hello World\n");
+}
+```
+
+另外再补充一点，gcc其实并不要求函数一定要在被调用之前定义或者声明（MSVC不允许），因为gcc在处理到某个未知类型的函数时，会为其创建一个隐式声明，并假设该函数返回值类型为int。但gcc此时无法检查传递给该函数的实参类型和个数是否正确，不利于编译器为我们排除错误（而且如果该函数的返回值不是int的话也会出错）。所以还是建议大家在函数调用前，先对其定义或声明。
+
+
+
 
 # 参考
 
