--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -180,7 +180,9 @@ int main(void)
 
 另外再补充一点，gcc其实**并不要求**函数一定要在**被调用之前定义或者声明**（MSVC不允许），因为**gcc**在处理到**某个未知类型的函数**时，会为其**创建一个隐式声明**，并**假设**该**函数返回值类型为int**。但**gcc**此时**无法检查**传递给该函数的**实参类型**和**个数**是否正确，不利于编译器为我们排除错误（而且如果该**函数的返回值不是int**的话也会**出错！！！**）。所以还是建议大家在函数调用前，先对其定义或声明。
 
-接着看编译和汇编。那么什么是编译？一句话描述：编译就是把预处理之后的文件进行一系列词法分析、语法分析、语义分析以及优化后生成的相应汇编代码文件。这一部分我们不能展开说了，一来我没有系统学习过编译原理的内容不敢信口开河，二来这部分要是展开去说需要很厚很厚的一本书了，细节大家就自己学习《编译原理》吧，相关的资料自然就是经典的龙书、虎书和鲸书了。
+# 编译和汇编
+
+接着看编译和汇编。那么什么是编译？一句话描述：**编译**就是把**预处理之后的文件**进行一系列**词法分析**、**语法分析**、**语义分析**以及优化后生成的**相应汇编代码**文件。这一部分我们不能展开说了，一来我没有系统学习过编译原理的内容不敢信口开河，二来这部分要是展开去说需要很厚很厚的一本书了，细节大家就自己学习《编译原理》吧，相关的资料自然就是经典的龙书、虎书和鲸书了。
 
 
 # 参考
