--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -80,6 +80,8 @@ gcc处理HelloWorld.c的大致过程：
 
 # 预处理
 
+`gcc -E HelloWorld.c -o HelloWorld.i`
+
 我们一步一步来看，首先是预处理，我们看看预处理阶段对代码进行了哪些处理。
 
 我们在终端输入指令 `gcc -E HelloWorld.c -o HelloWorld.i`，然后我们打开输出文件。
@@ -182,25 +184,37 @@ int main(void)
 
 # 编译
 
+`gcc -S HelloWorld.c -o HelloWorld.s`
+
+`gcc -S HelloWorld.i -o HelloWorld.s`
+
 接着看编译和汇编。
 
 那么什么是编译？一句话描述：**编译**就是把**预处理之后的文件**进行一系列**词法分析**、**语法分析**、**语义分析**以及优化后生成的**相应汇编代码**文件。
 
 这一部分我们不能展开说了，一来我没有系统学习过编译原理的内容不敢信口开河，二来这部分要是展开去说需要很厚很厚的一本书了，细节大家就自己学习《编译原理》吧，相关的资料自然就是经典的龙书、虎书和鲸书了。
 
-`gcc`怎么**查看编译后的汇编代码**呢？命令是 `gcc -S HelloWorld.c -o HelloWorld.s`，这样输出了汇编代码文件HelloWorld.s，其实输出的文件名可以随意，我是习惯使然。顺便说一句，这里生成的**汇编**是`AT&T`风格的汇编代码，如果大家更熟悉Intel风格，可以在命令行加上参数 `-masm=intel` ,这样gcc就会生成**Intel风格**的汇编代码了。不过**gcc的内联汇编**只支持`AT&T`风格，大家还是找找资料学学AT&T风格吧。
+`gcc`怎么**查看编译后的汇编代码**呢？命令是 `gcc -S HelloWorld.c -o HelloWorld.s`，这样输出了汇编代码文件HelloWorld.s，其实输出的文件名可以随意，我是习惯使然。
+
+顺便说一句，这里生成的**汇编**是`AT&T`风格的汇编代码，如果大家更熟悉Intel风格，可以在命令行加上参数 `-masm=intel` ,这样gcc就会生成**Intel风格**的汇编代码了。不过**gcc的内联汇编**只支持`AT&T`风格，大家还是找找资料学学AT&T风格吧。
 
 # 汇编
 
 再下来是汇编步骤，我们继续用一句话来描述：**汇编**就是**将编译后的汇编代码**翻译为**机器码**，几乎**每一条汇编指令**对应**一句机器码**。
 
-这里其实也没有什么好说的了，命令行 gcc -c HelloWorld.c 可以让编译器只进行到生成目标文件这一步，这样我们就能在目录下看到HelloWorld.o文件了。
+这里其实也没有什么好说的了，命令行 `gcc -c HelloWorld.c` 可以让**编译器**只进行到**生成目标文件**这一步，这样我们就能在目录下看到HelloWorld.o文件了。
 
-Linux下的可执行文件以及目标文件的格式叫作ELF(Executable Linkable Format)。其实Windows下的PE(Portable Executable)也好，ELF也罢，都是COFF(Common file format)格式的一种变种，甚至Windows下的目标文件就是以COFF格式去存储的。不同的操作系统之间的可执行文件的格式通常是不一样的，所以造成了编译好的HelloWorld没有办法直接复制执行，而需要在相关平台上重新编译。当然了，不能运行的原因自然不是这一点点，不同的操作系统接口（windows API和Linux的System Call）以及相关的类库不同也是原因之一。
+Linux下的**可执行文件**以及**目标文件**的**格式**叫作**ELF**(Executable Linkable Format)。其实Windows下的PE(Portable Executable)也好，ELF也罢，都是`COFF(Common file format)`格式的**一种变种**，甚至Windows下的目标文件就是以COFF格式去存储的。不同的操作系统之间的可执行文件的格式通常是不一样的，所以造成了编译好的HelloWorld没有办法直接复制执行，而需要在相关平台上重新编译。当然了，不能运行的原因自然不是这一点点，不同的操作系统接口（windows API和Linux的System Call）以及相关的类库不同也是原因之一。
 
 由于本文的读者定位，我们不能详细展开说了，有相关需求的同学可以去看《Windows PE权威指南》和《程序员的自我修养》去详细了解。
 
-我们接下来看最后的链接过程。这一步是将汇编产生的目标文件和所使用的库函数的目标文件链接生成一个可执行文件的过程。我想在这里稍微的扩展一下篇幅，稍微详细的说一说链接，一来这里造成的错误通常难以理解和处理，二来使用第三方库在开发中越来越常见了，想着大家可能更需要稍微了解一些细节了。
+# 链接
+
+我们接下来看最后的链接过程。
+
+这一步是将**汇编**产生的**目标文件**和**所使用的库函数的目标文件**链接**生成一个可执行文件**的过程。
+
+我想在这里稍微的扩展一下篇幅，稍微详细的说一说链接，一来这里造成的错误通常难以理解和处理，二来使用第三方库在开发中越来越常见了，想着大家可能更需要稍微了解一些细节了。
 
 我们先介绍gnu binutils工具包，这是一整套的二进制分析处理工具包。详细介绍请大家参考喂鸡百科：http://zh.wikipedia.org/wiki/GNU_Binutils
 
