--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -200,9 +200,17 @@ int main(void)
 
 # 汇编
 
+```
+gcc -c HelloWorld.c -o HelloWorld.o
+```
+
+```
+gcc -c HelloWorld.s -o HelloWorld.o
+```
+
 再下来是汇编步骤，我们继续用一句话来描述：**汇编**就是**将编译后的汇编代码**翻译为**机器码**，几乎**每一条汇编指令**对应**一句机器码**。
 
-这里其实也没有什么好说的了，命令行 `gcc -c HelloWorld.c` 可以让**编译器**只进行到**生成目标文件**这一步，这样我们就能在目录下看到HelloWorld.o文件了。
+这里其实也没有什么好说的了，命令行 `gcc -c HelloWorld.c -o HelloWorld.o` 可以让**编译器**只进行到**生成目标文件**这一步，这样我们就能在目录下看到HelloWorld.o文件了。
 
 Linux下的**可执行文件**以及**目标文件**的**格式**叫作**ELF**(Executable Linkable Format)。其实Windows下的PE(Portable Executable)也好，ELF也罢，都是`COFF(Common file format)`格式的**一种变种**，甚至Windows下的目标文件就是以COFF格式去存储的。不同的操作系统之间的可执行文件的格式通常是不一样的，所以造成了编译好的HelloWorld没有办法直接复制执行，而需要在相关平台上重新编译。当然了，不能运行的原因自然不是这一点点，不同的操作系统接口（windows API和Linux的System Call）以及相关的类库不同也是原因之一。
 
